/* (c) https://github.com/MontiCore/monticore */

plugins {
  //plugin is only resolved, not applied here -> no need to separately specify version in every subproject
  id 'monticore' version '6.1.0' apply false
}

allprojects {
  group = 'montithings'
  version = '6.0.0-SNAPSHOT'
  buildDir = "$projectDir/target"
}

subprojects {
  apply plugin: 'java'
  apply plugin: 'maven-publish'

  repositories {
    mavenLocal()

    maven {
      credentials.username mavenUser
      credentials.password mavenPassword
      url sePublicRepo
    }

    maven {
      credentials.username mavenUser
      credentials.password mavenPassword
      url sePrivateRepo
    }

    mavenCentral()
  }

  sourceCompatibility = '1.8'

  publishing {
    publications {
      maven(MavenPublication) {
        from(components.java)
      }
    }
    repositories.maven {
      credentials.username mavenUser
      credentials.password mavenPassword
      def releasesRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/montiarc-releases/"
      def snapshotsRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/montiarc-snapshots/"
      url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
    }
  }

  tasks.withType(JavaCompile) {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    options.encoding = 'UTF-8'
  }

}